Feature: add Kafka fo async communication between files and books services